--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
             <div class="portfolio-content">
                 <div class="card">
                     <div class="image">
-                        <img src="/Template_1/images/1.jpg" alt="">
+                        <img src="images/1.jpg" alt="">
                     </div>
                     <div class="text">
                         <h3>Project Here</h3>
@@ -141,7 +141,7 @@ manifest in so many surprising and.</p>
                 </div>
                 <div class="card">
                     <div class="image">
-                        <img src="/Template_1/images/2.jpg" alt="">
+                        <img src="images/2.jpg" alt="">
                     </div>
                     <div class="text">
                         <h3>Project Here</h3>
@@ -151,7 +151,7 @@ manifest in so many surprising and.</p>
                 </div>
                 <div class="card">
                     <div class="image">
-                        <img src="/Template_1/images/3.jpg" alt="">
+                        <img src="images/3.jpg" alt="">
                     </div>
                     <div class="text">
                         <h3>Project Here</h3>
@@ -170,7 +170,7 @@ manifest in so many surprising and.</p>
             <p>Less is more work</p>
             <div class="about-content">
                 <div class="image">
-                    <img src="/Template_1/images/About.jpg" alt="">
+                    <img src="images/About.jpg" alt="">
                 </div>
                 <div class="text">
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident, ut praesentium rem enim ullam maiores nostrum architecto, ex autem nisi explicabo fuga laborum temporibus possimus reiciendis, aut numquam quis ipsa.</p>
